# mcp-even-odd-league

./: .gitignore  README.md  TESTING.md  example.env  pyproject.toml  test_full_league.py  test_match.py  test_mcp_layer.py  test_timeout.py
SHARED/league_sdk/: __init__.py  config_loader.py  config_models.py  logger.py  mcp_client.py  repositories.py  requirements.txt
agents/league_manager/: handlers.py  main.py  requirements.txt
agents/player_P01/: handlers.py  main.py
agents/player_P02/: main.py  strategy.py
agents/referee_REF01/: game_logic.py  main.py  requirements.txt
docs/: PRD.md  analysis.md  extensibility.md
docs/architecture/: architecture.md  block_architecture.md  class_map.md  interfaces.md  mcp_message_contracts.md  project_tree_mapping.md  state_machines.md
docs/assignment/: chapter_06_requirements.md  chapter_08_game_flow.md  chapter_09_protocol.md
src/mcp_even_odd_league/: __init__.py
src/mcp_even_odd_league/agents/: __init__.py
src/mcp_even_odd_league/agents/league_manager/: main.py  scheduler.py
src/mcp_even_odd_league/agents/player_P01/: handlers.py  main.py  requirements.txt
src/mcp_even_odd_league/agents/player_P02/: main.py
src/mcp_even_odd_league/agents/player_P03/: handlers.py  main.py
src/mcp_even_odd_league/agents/player_P04/: main.py
src/mcp_even_odd_league/agents/referee_REF01/: game_logic.py  handlers.py  main.py
tests/: test_full_league.py  test_league.py  test_match.py  test_skeleton.py  test_timeout.py
tests/unit/: __init__.py  test_config_loader.py  test_game_logic.py
