[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-even-odd-league"
version = "0.1.0"
description = "MCP-based multi-agent Even/Odd League system"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "MCP League Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=0.19.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    # Test files
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",

    # Flask entry points (integration layer)
    "*/agents/*/main.py",

    # HTTP/MCP handlers (integration layer)
    "*/agents/*/handlers.py",

    # IO and networking modules (integration layer)
    "*/league_sdk/mcp_client.py",
    "*/league_sdk/logger.py",
    "*/league_sdk/repositories.py",

    # Stub/placeholder modules
    "*/agents/*/strategy.py",
    "*/agents/*/scheduler.py",
]

[tool.coverage.report]
# Core logic modules measured for coverage:
# - game_logic.py: Even/Odd game mechanics (deterministic)
# - config_loader.py: Configuration management (deterministic)
# - config_models.py: Data models (deterministic)

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
precision = 2
show_missing = true
